# dirtree-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/dirtree_generator/: __main__.py  docstrings.py  presenter.py
src/dirtree_generator/generators/: __init__.py  base.py  plain.py  rich.py  rich_styles.py
tests/: test_version.py
