[tool.poetry]
name = "dirtree-generator"
version = "0.1.0"
description = ""
authors = ["mikegorski <mike.gorski96@gmail.com>"]
readme = "README.md"
packages = [{include = "dirtree_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "I001"] # pyflakes, pycodestyle, isort
