[tool.poetry]
name = "dirtree-generator"
version = "0.1.0"
description = "A simple CLI tool for generating directory trees."
authors = ["mikegorski <mike.gorski96@gmail.com>"]
readme = "README.md"
packages = [{include = "dirtree_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
ruff = {version = "^0.1.6", python = "^3.7"}
mypy = {version = "^1.7.0", python = "^3.8" }
pre-commit = {version = "^3.5.0", python = "^3.8" }
pytest = {version = "^7.1", python = "^3.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "I001"]

[tool.poetry.scripts]
dirtree = "dirtree_generator.__main__:app"
